Close spark in tests and dirs cleanup